BUG-9747: set the logo to not a link when the high contrast mode is on

--- a/assets/css/print.scss
+++ b/assets/css/print.scss
@@ -7,6 +7,12 @@
     margin: 80px 50px 50px;
   }
 
+  @media (forced-colors: active) {
+    .govuk-header__logotype {
+      color: currentColor;
+    }
+  }
+
   .print-only {
     display: block;
   }
